# Talk-To-Order

./: .gitignore  README.md  main.py  pyproject.toml
agents/: food_ordering_agent.py  system_prompt.py
data/: menu.json
mcp_server/: server.py
mcp_server/tools/: cart_tools.py  menu_tools.py  order_tools.py
tests/: test_agent.py
ui/: app.py
ui/components/: cart_sidebar.py  chat_display.py  voice_recorder.py
voice/: stt.py  tts.py
